[package]
name = "op-reth"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods", features = [ "derive" ] }
reth-db = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods", features = ["mdbx"] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-staged-sync = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-network = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }
reth-executor = { git = "https://github.com/paradigmxyz/reth", branch = "rkrasiuk/expose-node-methods" }

# tracing
tracing = "0.1"

# io
fdlimit = "0.2.1"
confy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
tempfile = "3.4.0"
bytes = "1.4"

# cli
clap = { git = "https://github.com/rkrasiuk/clap", branch = "rkrasiuk/fix-almost-swapped-lint", features = ["derive", "cargo"] }
dotenv = "0.15.0"

# aws
aws-config = "0.54.1"
aws-smithy-http = "0.54.1"
aws-sdk-s3 = "0.24.0"

# misc
eyre = "0.6.8"
tokio = { version = "1.21", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3.25"
rayon = "1.6.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
once_cell = "1.17.1"
base64 = "0.21"
itertools = "0.10"
rlp = { version = "0.5.2", features = ["derive"] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm" }
revm-primitives = { git = "https://github.com/bluealloy/revm" }
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
ruint = { git = "https://github.com/paradigmxyz/uint" }
